--- a/app/globals.css
+++ b/app/globals.css
@@ -129,6 +129,9 @@
   .nest-button--primary {
     @apply border border-blue-600 bg-blue-600 text-white hover:bg-blue-700;
   }
+  .nest-button--danger {
+    @apply border border-red-600 bg-red-600 text-white hover:bg-red-700;
+  }
   .nest-button--clear {
     @apply bg-neutral-100 hover:bg-neutral-200
   }
